<resources>
    <string name="app_name">KeydClicker</string>

    <!-- Nome das activitys -->
    <string name="title_activity_keyd_main">Keyd Clicker</string>
    <string name="title_activity_keyd_menu">Keyd Clicker</string>
    <string name="title_activity_keyd_loja">Keyd Clicker</string>
    <string name="title_activity_keyd_upgrades">Keyd Clicker</string>

    <!-- Qualquer -->
    <string name="header">Bem Vindos ao Keyd Clicker!</string>
    <string name="Text_View">Clicks:</string>
    <string name="Text_View1">K$ por sec:</string>
    <string name="Text_View2">K$ Total:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Loja -->
    <string name="Text_Qtde">0</string>
    <string name="Text_Preco">Preço</string>
    <string name="Text_Preco_Streamer">K$ 0</string>
    <string name="Text_Preco_Topo">K$ 0</string>
    <string name="Text_Preco_Selva">K$ 0</string>
    <string name="Text_Preco_Mid">K$ 0</string>
    <string name="Text_Preco_Adc">K$ 0</string>
    <string name="Text_Preco_Supote">K$ 0</string>

    <!-- Upgrades -->
    <string name="Text_KillSpree">Killing Spree</string>
    <string name="Text_Preco_UP">K$ 0</string>
    <string name="Text_Comprar">Comprar</string>

    <!-- Nome dos botoes -->
    <string name="Button1">Loja</string>
    <string name="Button2">Upgrades</string>
    <string name="Button3">Menu</string>
    <string name="Button_Menu">INICIAR</string>
    <string name="Button_Menu_Info">INFO</string>
    <string name="Button_Menu_Sair">SAIR</string>
    <string name="Button_Loja_Streamer">STREAMER</string>
    <string name="Button_Loja_Topo">TOPO</string>
    <string name="Button_Loja_Selva">SELVA</string>
    <string name="Button_Loja_Mid">MID</string>
    <string name="Button_Loja_Adc">ADC</string>
    <string name="Button_Loja_Suporte">SUPORTE</string>
    <string name="title_activity_keyd_teste">Keyd_testeActivity</string>

</resources>
